# luka

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  cmake.yml
design/: grammer.ebnf
docs/: Doxyfile
examples/: arrays.luka  bitwise.luka  builtin.luka  defer.luka  enum.luka  fibonacci.luka  guessing_game.luka  hello_world.luka  life.luka  math.luka  ptr.luka  stdio.luka  struct.luka  variables.luka  while.luka
examples/lib/: stddef.luka  stdio.luka  stdlib.luka  string.luka  time.luka
include/: ast.h  core.h  defs.h  expr.h  gen.h  interp.h  io.h  lexer.h  lib.h  logger.h  parser.h  tree.h  type.h  type_checker.h  uthash.h  utils.h  vector.h
lib/: getopt.luka  stdio.luka  stdlib.luka  string.luka  unistd.luka
lib/std/: String.luka
src/: ast.c  core.c  expr.c  gen.c  interp.c  io.c  lexer.c  lib.c  logger.c  main.c  main_internal.h  parser.c  tree.c  type.c  type_checker.c  utils.c
test/: CMakeLists.txt  lexer.c
tests/: CMakeLists.txt  lexer.c
